<resources>
    <string name="app_name">MedforCure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_its_done">Don\'t Worry , We just need your registered email address and its done.</string>
    <string name="lt_lt_go_back"><![CDATA[< < Go back]]></string>
    <string name="provide_your_registered_email_address">Provide your registered email address</string>
    <string name="check_your_inbox_after_clicking_the_button_above">Check your Inbox after clicking the button above</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="password_minimum_8_characters">Password (minimum 8 characters)</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">727414387865629</string>
    <string name="fb_login_protocol_scheme">fb727414387865629</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="sdfsdfj_slkdfjs_flksdf_fkljsdflsjdf_lskdfj_lf_asdjkalsdja_lakf_alkfjj_sldfks_dlkjf_sdfjlsdkfjlsdkjfl">sdfsdfj slkdfjs flksdf fkljsdflsjdf lskdfj lf asdjkalsdja lakf alkfjj sldfks dlkjf sdfjlsdkfjlsdkjfl</string>
    <string name="todo">TODO</string>
    <string name="med_for_cure">Med for Cure</string>
    <string name="my_orders">My Orders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>