<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Med_for_Cure"
            android:icon="@drawable/home"
            android:title="@string/med_for_cure" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/my_orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@drawable/my_rewards"
            android:title="@string/my_rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/my_cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/my_wishlist"
            android:title="@string/my_wishlist"
            android:visibility="visible" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/my_account"
            android:title="@string/my_account" />
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/sign_out"
        android:title="@string/sign_out" />
</menu>