<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:saveEnabled="false">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_worry_we_just_need_your_registered_email_address_and_its_done"
            android:textAlignment="center"
            android:textColor="#304FFE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="#D50000"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/provide_your_registered_email_address"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:theme="@style/ProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="#80FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_progress_bar" />

        <TextView
            android:id="@+id/forgot_password_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/lt_lt_go_back"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/forgot_password_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="88dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBar"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_container" />

        <LinearLayout
            android:id="@+id/forgot_password_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email">

            <ImageView
                android:id="@+id/greenmsgicon"
                android:layout_width="17dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/greenmsg" />

            <TextView
                android:id="@+id/forgot_password_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recovery email sent successfully! Please check Inbox"
                android:textColor="#64DD17"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/redmsgicon"
                android:layout_width="17dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/redmsg" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>