<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3FFFFFF">


        <TextView
            android:id="@+id/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/divider10"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:backgroundTint="#6A6A6A"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <View
            android:id="@+id/divider9"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:backgroundTint="#6A6A6A"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/buttoncolor"
            android:enabled="false"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_rpassword" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#6A6A6A"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/password_minimum_8_characters"
            android:inputType="textPassword"
            android:shadowColor="#8D8D8E"
            android:textColor="#000000"
            android:textColorHighlight="#8D8D8E"
            android:textColorHint="#515151"
            android:textColorLink="#8D8D8E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

        <EditText
            android:id="@+id/sign_up_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#6A6A6A"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:shadowColor="#8D8D8E"
            android:textColor="#000000"
            android:textColorHighlight="#8D8D8E"
            android:textColorHint="#515151"
            android:textColorLink="#8D8D8E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#6A6A6A"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:shadowColor="#8D8D8E"
            android:textColor="#000000"
            android:textColorHighlight="#8D8D8E"
            android:textColorHint="#515151"
            android:textColorLink="#8D8D8E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_full_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/sign_up_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:padding="16dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="#000000"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

        <EditText
            android:id="@+id/sign_up_rpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#6A6A6A"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:shadowColor="#8D8D8E"
            android:textColor="#000000"
            android:textColorHighlight="#8D8D8E"
            android:textColorHint="#515151"
            android:textColorLink="#8D8D8E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />

        <ProgressBar
            android:id="@+id/sign_up_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:foregroundTint="@color/colorPrimary"
            android:indeterminateTint="@color/colorPrimary"
            android:progressBackgroundTint="@color/colorPrimary"
            android:progressTint="@color/colorPrimary"
            android:secondaryProgressTint="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>